css/custom.css
body {
  padding-top: 10px;
  font: 18px "PT Sans",sans-serif;
}

a, a:hover {
color: #05A9C5;
}

hr {
  border-color: #efefef;
}

.notes p, .notes li {
  color: #999;
  font-size: .8em;
}

.navbar-brand { font-size: 30px;}
.navbar-header>.navbar-brand, .navbar-inverse .navbar-nav>li>a {color: #05A9C5;}

#map { width: 100%; }

.info.leaflet-control {
  font-family:'Montserrat',sans-serif;
  background-color: #fff;
  padding: 0 10px;
  min-width: 200px;
  -moz-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
  -webkit-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
  box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}

.info h4 {
  font-size: 18px;
  color: #777;
}

.leaflet-google-layer{
    z-index: 0;
}
.leaflet-map-pane{
    z-index: 100;
}

.leaflet-google-layer .leaflet-zoom-anim, .leaflet-google-layer .leaflet-zoom-animated {
    transition-property: none!important;
    -webkit-transition-property: none!important;
    -webkit-animation: none!important;
    animation: none!important;
}

#take-action {
  color: #333;
}

.btn-primary {
    background-color: #3690c0;
    border-color: #3690c0;
    text-transform: none;
    font-size: 15px;
    font-weight: normal;
}

.btn-primary:hover {
    background-color: #0570b0;
    border-color: #0570b0;
}

.btn-default {
    text-transform: none;
    font-size: 15px;
    font-weight: normal;
}

.info.leaflet-control {
    font-family:'Montserrat',sans-serif;
    background-color: #fff;
    padding: 0 10px;
    -moz-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
    -webkit-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
    box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}

.footer-brand { margin-bottom: 10px;}


table {
  background: #fff;
  border: solid 1px #ddd;
}

table tr th, table tr td {
  color: #222;
  text-align: left;
  padding: 5px 7px;
}
table tr.even, table tr.alt, table tr:nth-of-type(even) {
  background: #f9f9f9;
}
table thead tr th, table tfoot tr th, table tfoot tr td, table tbody tr th, table tbody tr td, table tr td {
  display: table-cell;
}

